Dockerization re-worked

--- a/ForumProject/Dockerfile
+++ b/ForumProject/Dockerfile
@@ -1,15 +1,16 @@
 FROM python:3.9.19-slim-bullseye
 
-RUN apt-get update && apt-get install -y wget && \
-    wget https://github.com/jwilder/dockerize/releases/download/v0.6.1/dockerize-linux-amd64-v0.6.1.tar.gz && \
-    tar -C /usr/local/bin -xzvf dockerize-linux-amd64-v0.6.1.tar.gz && \
-    rm dockerize-linux-amd64-v0.6.1.tar.gz
+ENV PYTHONDONTWRITEBYTECODE 1
+ENV PYTHONUNBUFFERED 1
 
-WORKDIR /ForumProject
+RUN pip install --upgrade pip
 
-COPY requirements.txt requirements.txt
+WORKDIR /app
+
+COPY . /app/
+RUN apt-get update && apt-get install -y curl && apt-get clean
 RUN pip install -r requirements.txt
 
-COPY . .
+EXPOSE 8000
 
-CMD ["dockerize", "-wait", "tcp://db:5432", "-timeout", "60s", "python3", "manage.py", "runserver", "0.0.0.0:8000"]
+CMD ["python3", "manage.py", "runserver", "0.0.0.0:8000"]
