resolved possibility to run server with either (1) reunserver or (2) docker-compose. Also, integartion into setup project is done

--- a/ForumProject/docker-compose.yml
+++ b/ForumProject/docker-compose.yml
@@ -23,6 +23,8 @@ services:
       - media_volume:/app/media
     env_file:
       - .env
+    environment:
+      - DOCKER_ENV=true
     ports:
       - "8000:8000"
 
