--- a/ForumProject/requirements.txt
+++ b/ForumProject/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.8.1
 Django==5.0.4
 django-countries==7.6.1
+django-filter==24.2
 djangorestframework==3.15.1
 djangorestframework-jwt==1.11.0
 djangorestframework-simplejwt==5.3.1
