--- a/ForumProject/docker-compose.yml
+++ b/ForumProject/docker-compose.yml
@@ -28,6 +28,11 @@ services:
     ports:
       - "8000:8000"
 
+  redis:
+    image: redis:7
+    ports:
+      - "6379:6379"
+
 volumes:
   static_volume:
   media_volume:
