--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -49,10 +49,8 @@ jobs:
       #     python ForumProject/manage.py test startups.tests
 
       - name: Install pylint
-        run: python -m pip install pylint
-      
-      - name: Analysing the code with pylint
         run: |
+          python -m pip install pylint
           pylint $(git ls-files '*.py')
       
       
