--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -11,7 +11,7 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
       
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
@@ -27,8 +27,7 @@ jobs:
           pip install -r ForumProject/requirements.txt
 
       - name: Install pylint
-        run: |
-          python -m pip install pylint
-          pylint $(git ls-files '*.py')
+        run: python -m pip install pylint
       
-      
+      - name: Run pylint
+        run: pylint $(git ls-files '*.py')
