--- a/.github/workflows/postgres.yml
+++ b/.github/workflows/postgres.yml
@@ -15,9 +15,9 @@ jobs:
         ports:
           - 5432:5432
         options: >-
-          --health-cmd "pg_isready -U $POSTGRES_USER"
-          --health-interval 10s
-          --health-timeout 5s
+          --health-cmd "pg_isready -U ${{ secrets.POSTGRES_USER }}" 
+          --health-interval 10s 
+          --health-timeout 5s 
           --health-retries 5
     strategy:
       matrix:
@@ -39,14 +39,12 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r ForumProject/requirements.txt
-
       - name: Wait for PostgreSQL to be ready
         run: |
           until pg_isready -h localhost -p 5432; do
             echo "Waiting for PostgreSQL..."
             sleep 1
           done
-
       - name: Run tests
         env:
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
