--- a/.github/workflows/postgres.yml
+++ b/.github/workflows/postgres.yml
@@ -51,7 +51,7 @@ jobs:
           DB_HOST: localhost
           POSTGRES_NAME: postgres
           POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+          POSTGRES_PASSWORD: postgres
           POSTGRES_HOST: localhost
           POSTGRES_PORT: 5432
           EMAIL_HOST: ${{ secrets.EMAIL_HOST }}
