--- a/.github/workflows/postgres.yml
+++ b/.github/workflows/postgres.yml
@@ -63,8 +63,4 @@ jobs:
           DJANGO_SUPERUSER_PASSWORD: ${{ secrets.DJANGO_SUPERUSER_PASSWORD }}
           REDIS_HOST: ${{ secrets.REDIS_HOST }}
           REDIS_PORT: ${{ secrets.REDIS_PORT }}
-        run: |
-          echo "POSTGRES_NAME: $POSTGRES_NAME"
-          echo "POSTGRES_USER: $POSTGRES_USER"
-          echo "POSTGRES_PASSWORD: $POSTGRES_PASSWORD"
-          python ForumProject/manage.py test startups.tests
+        run: python ForumProject/manage.py test 
