--- a/.pylintrc
+++ b/.pylintrc
@@ -815,7 +815,7 @@ ignored-argument-names=_.*|^ignored_|^unused_
 
 
 # Tells whether we should check for unused import in __init__ files.
-init-import=nog
+init-import=no
 
 
 # List of qualified module names which can have objects that can redefine
