--- a/ForumProject/requirements.txt
+++ b/ForumProject/requirements.txt
@@ -13,6 +13,7 @@ daphne==4.1.2
 dill==0.3.8
 Django==5.0.6
 django-countries==7.6.1
+django-extensions==3.2.3
 django-filter==24.2
 django-phonenumbers==1.0.1
 djangorestframework==3.15.1
@@ -22,6 +23,7 @@ hyperlink==21.0.0
 idna==3.7
 incremental==22.10.0
 isort==5.13.2
+MarkupSafe==2.1.5
 mccabe==0.7.0
 msgpack==1.0.8
 pillow==10.3.0
@@ -46,4 +48,5 @@ Twisted==24.3.0
 txaio==23.1.1
 typing_extensions==4.11.0
 tzdata==2024.1
+Werkzeug==3.0.3
 zope.interface==6.3
