--- a/.github/workflows/postgres.yml
+++ b/.github/workflows/postgres.yml
@@ -63,6 +63,7 @@ jobs:
           DJANGO_SUPERUSER_PASSWORD: ${{ secrets.DJANGO_SUPERUSER_PASSWORD }}
           REDIS_HOST: ${{ secrets.REDIS_HOST }}
           REDIS_PORT: ${{ secrets.REDIS_PORT }}
+          CRYPTOGRAPHY_KEY: ${{ secrets.CRYPTOGRAPHY_KEY }}
         run: |
           cd ForumProject
           python manage.py test 
