--- a/.github/workflows/postgres.yml
+++ b/.github/workflows/postgres.yml
@@ -56,8 +56,8 @@ jobs:
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
           DB_HOST: localhost
           POSTGRES_NAME: postgres
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
+          # POSTGRES_USER: postgres
+          # POSTGRES_PASSWORD: postgres
           POSTGRES_HOST: localhost
           POSTGRES_PORT: 5432
           EMAIL_HOST: ${{ secrets.EMAIL_HOST }}
@@ -67,9 +67,9 @@ jobs:
           EMAIL_USE_TLS: ${{ secrets.EMAIL_USE_TLS }}
           DJANGO_SUPERUSER_EMAIL: ${{ secrets.DJANGO_SUPERUSER_EMAIL }}
           DJANGO_SUPERUSER_PASSWORD: ${{ secrets.DJANGO_SUPERUSER_PASSWORD }}
-          REDIS_HOST: ${{ secrets.REDIS_HOST }}
-          REDIS_PORT: ${{ secrets.REDIS_PORT }}
-          CRYPTOGRAPHY_KEY: 'CRYPTOGRAPHY_KEY'
+          # REDIS_HOST: ${{ secrets.REDIS_HOST }}
+          # REDIS_PORT: ${{ secrets.REDIS_PORT }}
+          # CRYPTOGRAPHY_KEY: 'CRYPTOGRAPHY_KEY'
         run: |
           cd ForumProject
           python manage.py test 
