--- a/.github/workflows/postgres.yml
+++ b/.github/workflows/postgres.yml
@@ -67,8 +67,8 @@ jobs:
           EMAIL_USE_TLS: ${{ secrets.EMAIL_USE_TLS }}
           DJANGO_SUPERUSER_EMAIL: ${{ secrets.DJANGO_SUPERUSER_EMAIL }}
           DJANGO_SUPERUSER_PASSWORD: ${{ secrets.DJANGO_SUPERUSER_PASSWORD }}
-          # REDIS_HOST: ${{ secrets.REDIS_HOST }}
-          # REDIS_PORT: ${{ secrets.REDIS_PORT }}
+          REDIS_HOST: ${{ secrets.REDIS_HOST }}
+          REDIS_PORT: ${{ secrets.REDIS_PORT }}
           # CRYPTOGRAPHY_KEY: 'CRYPTOGRAPHY_KEY'
         run: |
           cd ForumProject
