Update Dockerfile - see detailed description below
Added git installation before running ```RUN pip install -r requirements.txt``` to ensure that package ```django-cryptography @ git+https://github.com/saurav-codes/django-cryptography@847cade2cc07af8316d59dc0ded709dee708cbc8``` gets installed successfully during the image built process

--- a/ForumProject/Dockerfile
+++ b/ForumProject/Dockerfile
@@ -3,6 +3,8 @@ FROM python:3.11-slim
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
+RUN apt-get update && apt-get install -y git curl && apt-get clean
+
 RUN pip install --upgrade pip
 
 WORKDIR /app
@@ -11,7 +13,6 @@ COPY requirements.txt /app/
 RUN pip install -r requirements.txt
 
 COPY . /app/
-RUN apt-get update && apt-get install -y curl && apt-get clean
 
 ADD https://github.com/jwilder/dockerize/releases/download/v0.7.0/dockerize-alpine-linux-amd64-v0.7.0.tar.gz /app/dockerize.tar.gz
 RUN tar -C /app -xzf /app/dockerize.tar.gz && rm /app/dockerize.tar.gz
